--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ results/plots/*
 # System files
 .DS_Store
 Thumbs.db 
+
+# ─── Environment files ────────────────────────────────────────────────────────
+.env
+*.env.*      # e.g. .env.local, .env.production
