update .gitignore to ignore pytorch

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Thumbs.db
 # ─── Environment files ────────────────────────────────────────────────────────
 .env
 *.env.*      # e.g. .env.local, .env.production
+inference/pytorch
